static/psi4manual/1.2.1/_sources/autodir_psivariables/module__fnocc.rst.txt
.. _`apdx:fnocc_psivar`:


FNOCC
=====

.. hlist::
   :columns: 1

   * :psivar:`(T) CORRECTION ENERGY <(T)CORRECTIONENERGY>`

   * :psivar:`ACPF CORRELATION ENERGY <ACPFCORRELATIONENERGY>`

   * :psivar:`ACPF OPPOSITE-SPIN CORRELATION ENERGY <ACPFOPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`ACPF SAME-SPIN CORRELATION ENERGY <ACPFSAME-SPINCORRELATIONENERGY>`

   * :psivar:`ACPF TOTAL ENERGY <ACPFTOTALENERGY>`

   * :psivar:`AQCC CORRELATION ENERGY <AQCCCORRELATIONENERGY>`

   * :psivar:`AQCC OPPOSITE-SPIN CORRELATION ENERGY <AQCCOPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`AQCC SAME-SPIN CORRELATION ENERGY <AQCCSAME-SPINCORRELATIONENERGY>`

   * :psivar:`AQCC TOTAL ENERGY <AQCCTOTALENERGY>`

   * :psivar:`CC D1 DIAGNOSTIC <CCD1DIAGNOSTIC>`

   * :psivar:`CC T1 DIAGNOSTIC <CCT1DIAGNOSTIC>`

   * :psivar:`CCSD CORRELATION ENERGY <CCSDCORRELATIONENERGY>`

   * :psivar:`CCSD OPPOSITE-SPIN CORRELATION ENERGY <CCSDOPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`CCSD SAME-SPIN CORRELATION ENERGY <CCSDSAME-SPINCORRELATIONENERGY>`

   * :psivar:`CCSD TOTAL ENERGY <CCSDTOTALENERGY>`

   * :psivar:`CCSD(T) CORRELATION ENERGY <CCSD(T)CORRELATIONENERGY>`

   * :psivar:`CCSD(T) TOTAL ENERGY <CCSD(T)TOTALENERGY>`

   * :psivar:`CEPA(0) CORRELATION ENERGY <CEPA(0)CORRELATIONENERGY>`

   * :psivar:`CEPA(0) OPPOSITE-SPIN CORRELATION ENERGY <CEPA(0)OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`CEPA(0) SAME-SPIN CORRELATION ENERGY <CEPA(0)SAME-SPINCORRELATIONENERGY>`

   * :psivar:`CEPA(0) TOTAL ENERGY <CEPA(0)TOTALENERGY>`

   * :psivar:`CEPA(1) CORRELATION ENERGY <CEPA(1)CORRELATIONENERGY>`

   * :psivar:`CEPA(1) OPPOSITE-SPIN CORRELATION ENERGY <CEPA(1)OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`CEPA(1) SAME-SPIN CORRELATION ENERGY <CEPA(1)SAME-SPINCORRELATIONENERGY>`

   * :psivar:`CEPA(1) TOTAL ENERGY <CEPA(1)TOTALENERGY>`

   * :psivar:`CEPA(2) CORRELATION ENERGY <CEPA(2)CORRELATIONENERGY>`

   * :psivar:`CEPA(2) OPPOSITE-SPIN CORRELATION ENERGY <CEPA(2)OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`CEPA(2) SAME-SPIN CORRELATION ENERGY <CEPA(2)SAME-SPINCORRELATIONENERGY>`

   * :psivar:`CEPA(2) TOTAL ENERGY <CEPA(2)TOTALENERGY>`

   * :psivar:`CEPA(3) CORRELATION ENERGY <CEPA(3)CORRELATIONENERGY>`

   * :psivar:`CEPA(3) OPPOSITE-SPIN CORRELATION ENERGY <CEPA(3)OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`CEPA(3) SAME-SPIN CORRELATION ENERGY <CEPA(3)SAME-SPINCORRELATIONENERGY>`

   * :psivar:`CEPA(3) TOTAL ENERGY <CEPA(3)TOTALENERGY>`

   * :psivar:`CISD CORRELATION ENERGY <CISDCORRELATIONENERGY>`

   * :psivar:`CISD OPPOSITE-SPIN CORRELATION ENERGY <CISDOPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`CISD SAME-SPIN CORRELATION ENERGY <CISDSAME-SPINCORRELATIONENERGY>`

   * :psivar:`CISD TOTAL ENERGY <CISDTOTALENERGY>`

   * :psivar:`CURRENT CORRELATION ENERGY <CURRENTCORRELATIONENERGY>`

   * :psivar:`CURRENT ENERGY <CURRENTENERGY>`

   * :psivar:`LCCD CORRELATION ENERGY <LCCDCORRELATIONENERGY>`

   * :psivar:`LCCD OPPOSITE-SPIN CORRELATION ENERGY <LCCDOPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`LCCD SAME-SPIN CORRELATION ENERGY <LCCDSAME-SPINCORRELATIONENERGY>`

   * :psivar:`LCCD TOTAL ENERGY <LCCDTOTALENERGY>`

   * :psivar:`LCCSD CORRELATION ENERGY <LCCSDCORRELATIONENERGY>`

   * :psivar:`LCCSD OPPOSITE-SPIN CORRELATION ENERGY <LCCSDOPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`LCCSD SAME-SPIN CORRELATION ENERGY <LCCSDSAME-SPINCORRELATIONENERGY>`

   * :psivar:`LCCSD TOTAL ENERGY <LCCSDTOTALENERGY>`

   * :psivar:`MP2 CORRELATION ENERGY <MP2CORRELATIONENERGY>`

   * :psivar:`MP2 OPPOSITE-SPIN CORRELATION ENERGY <MP2OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`MP2 SAME-SPIN CORRELATION ENERGY <MP2SAME-SPINCORRELATIONENERGY>`

   * :psivar:`MP2 TOTAL ENERGY <MP2TOTALENERGY>`

   * :psivar:`MP2.5 CORRELATION ENERGY <MP2.5CORRELATIONENERGY>`

   * :psivar:`MP2.5 TOTAL ENERGY <MP2.5TOTALENERGY>`

   * :psivar:`MP3 CORRELATION ENERGY <MP3CORRELATIONENERGY>`

   * :psivar:`MP3 TOTAL ENERGY <MP3TOTALENERGY>`

   * :psivar:`MP4 CORRELATION ENERGY <MP4CORRELATIONENERGY>`

   * :psivar:`MP4 TOTAL ENERGY <MP4TOTALENERGY>`

   * :psivar:`MP4(SDQ) CORRELATION ENERGY <MP4(SDQ)CORRELATIONENERGY>`

   * :psivar:`MP4(SDQ) TOTAL ENERGY <MP4(SDQ)TOTALENERGY>`

   * :psivar:`MP4(SDTQ) CORRELATION ENERGY <MP4(SDTQ)CORRELATIONENERGY>`

   * :psivar:`MP4(SDTQ) TOTAL ENERGY <MP4(SDTQ)TOTALENERGY>`

   * :psivar:`MP4(T) CORRECTION ENERGY <MP4(T)CORRECTIONENERGY>`

   * :psivar:`NAUX (CC) <NAUX(CC)>`

   * :psivar:`NAUX (SCF) <NAUX(SCF)>`

   * :psivar:`QCISD CORRELATION ENERGY <QCISDCORRELATIONENERGY>`

   * :psivar:`QCISD OPPOSITE-SPIN CORRELATION ENERGY <QCISDOPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`QCISD SAME-SPIN CORRELATION ENERGY <QCISDSAME-SPINCORRELATIONENERGY>`

   * :psivar:`QCISD TOTAL ENERGY <QCISDTOTALENERGY>`

   * :psivar:`QCISD(T) CORRELATION ENERGY <QCISD(T)CORRELATIONENERGY>`

   * :psivar:`QCISD(T) TOTAL ENERGY <QCISD(T)TOTALENERGY>`

   * :psivar:`SCF TOTAL ENERGY <SCFTOTALENERGY>`


