static/psi4manual/1.4.0/_sources/autodir_psivariables/module__fnocc.rst.txt
.. _`apdx:fnocc_psivar`:


FNOCC
=====

.. hlist::
   :columns: 1

   * :psivar:`(T) CORRECTION ENERGY`

   * :psivar:`ACPF CORRELATION ENERGY`

   * :psivar:`ACPF OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`ACPF SAME-SPIN CORRELATION ENERGY`

   * :psivar:`ACPF TOTAL ENERGY`

   * :psivar:`AQCC CORRELATION ENERGY`

   * :psivar:`AQCC OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`AQCC SAME-SPIN CORRELATION ENERGY`

   * :psivar:`AQCC TOTAL ENERGY`

   * :psivar:`CC D1 DIAGNOSTIC`

   * :psivar:`CC T1 DIAGNOSTIC`

   * :psivar:`CCSD CORRELATION ENERGY`

   * :psivar:`CCSD DOUBLES ENERGY`

   * :psivar:`CCSD ITERATIONS`

   * :psivar:`CCSD OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`CCSD PAIR ENERGIES` (array)

   * :psivar:`CCSD SAME-SPIN CORRELATION ENERGY`

   * :psivar:`CCSD SINGLES ENERGY`

   * :psivar:`CCSD TOTAL ENERGY`

   * :psivar:`CCSD(T) CORRELATION ENERGY`

   * :psivar:`CCSD(T) TOTAL ENERGY`

   * :psivar:`CEPA(0) CORRELATION ENERGY`

   * :psivar:`CEPA(0) DOUBLES ENERGY`

   * :psivar:`CEPA(0) OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`CEPA(0) SAME-SPIN CORRELATION ENERGY`

   * :psivar:`CEPA(0) SINGLES ENERGY`

   * :psivar:`CEPA(0) TOTAL ENERGY`

   * :psivar:`CEPA(1) CORRELATION ENERGY`

   * :psivar:`CEPA(1) OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`CEPA(1) SAME-SPIN CORRELATION ENERGY`

   * :psivar:`CEPA(1) TOTAL ENERGY`

   * :psivar:`CEPA(2) CORRELATION ENERGY`

   * :psivar:`CEPA(2) OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`CEPA(2) SAME-SPIN CORRELATION ENERGY`

   * :psivar:`CEPA(2) TOTAL ENERGY`

   * :psivar:`CEPA(3) CORRELATION ENERGY`

   * :psivar:`CEPA(3) OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`CEPA(3) SAME-SPIN CORRELATION ENERGY`

   * :psivar:`CEPA(3) TOTAL ENERGY`

   * :psivar:`CISD CORRELATION ENERGY`

   * :psivar:`CISD OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`CISD SAME-SPIN CORRELATION ENERGY`

   * :psivar:`CISD TOTAL ENERGY`

   * :psivar:`CURRENT CORRELATION ENERGY`

   * :psivar:`CURRENT ENERGY`

   * :psivar:`LCCD CORRELATION ENERGY`

   * :psivar:`LCCD DOUBLES ENERGY`

   * :psivar:`LCCD OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`LCCD SAME-SPIN CORRELATION ENERGY`

   * :psivar:`LCCD SINGLES ENERGY`

   * :psivar:`LCCD TOTAL ENERGY`

   * :psivar:`LCCSD CORRELATION ENERGY`

   * :psivar:`LCCSD DOUBLES ENERGY`

   * :psivar:`LCCSD OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`LCCSD SAME-SPIN CORRELATION ENERGY`

   * :psivar:`LCCSD SINGLES ENERGY`

   * :psivar:`LCCSD TOTAL ENERGY`

   * :psivar:`MP2 CORRELATION ENERGY`

   * :psivar:`MP2 DOUBLES ENERGY`

   * :psivar:`MP2 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP2 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP2 SINGLES ENERGY`

   * :psivar:`MP2 TOTAL ENERGY`

   * :psivar:`MP2.5 CORRELATION ENERGY`

   * :psivar:`MP2.5 DOUBLES ENERGY`

   * :psivar:`MP2.5 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP2.5 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP2.5 SINGLES ENERGY`

   * :psivar:`MP2.5 TOTAL ENERGY`

   * :psivar:`MP3 CORRELATION ENERGY`

   * :psivar:`MP3 DOUBLES ENERGY`

   * :psivar:`MP3 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP3 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP3 SINGLES ENERGY`

   * :psivar:`MP3 TOTAL ENERGY`

   * :psivar:`MP4 CORRELATION ENERGY`

   * :psivar:`MP4 TOTAL ENERGY`

   * :psivar:`MP4(SDQ) CORRELATION ENERGY`

   * :psivar:`MP4(SDQ) TOTAL ENERGY`

   * :psivar:`MP4(SDTQ) CORRELATION ENERGY`

   * :psivar:`MP4(SDTQ) TOTAL ENERGY`

   * :psivar:`MP4(T) CORRECTION ENERGY`

   * :psivar:`NAUX (CC)`

   * :psivar:`NAUX (SCF)`

   * :psivar:`QCISD CORRELATION ENERGY`

   * :psivar:`QCISD OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`QCISD SAME-SPIN CORRELATION ENERGY`

   * :psivar:`QCISD TOTAL ENERGY`

   * :psivar:`QCISD(T) CORRELATION ENERGY`

   * :psivar:`QCISD(T) TOTAL ENERGY`

   * :psivar:`SCF TOTAL ENERGY`


